[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = selinux
url = https://github.com/pycontribs/selinux
project_urls =
    Bug Tracker = https://github.com/pycontribs/selinux/issues
    Release Management = https://github.com/pycontribs/selinux/releases
    CI: Travis = https://travis-ci.com/pycontribs/selinux
    Source Code = https://github.com/pycontribs/selinux
description = shim selinux module
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

history =  file: HISTORY.rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT license
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    selinux
    virtualenv

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    distro>=1.3.0
    setuptools>=39.0

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0
[options.packages.find]
where = .

[flake8]
exclude = build .tox

[mypy]
python_version = 2.7
